css alignment fixes

--- a/public/stylesheets/sass/chapters.sass
+++ b/public/stylesheets/sass/chapters.sass
@@ -11,3 +11,4 @@
     font-size: 1.3em
     font-style: italic
     padding-left: 0.5em
+    margin-bottom: 0
