--- a/public/stylesheets/sass/content.sass
+++ b/public/stylesheets/sass/content.sass
@@ -1,6 +1,7 @@
 .chapter-content
   font-family: adobe-garamond-pro, sans-serif
-  padding-top: 3.5em
+  // pad bottom to account for navigation bar
+  padding: 3.5em 0 2em 0
 
   p
     color: $content-color
